--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -3,7 +3,7 @@ authors = ["Val <saviorand@gmail.com>"]
 channels = ["conda-forge", "https://conda.modular.com/max"]
 description = " Networking abstractions for Mojo"
 name = "pyre"
-platforms = ["osx-arm64", "linux-64]
+platforms = ["osx-arm64", "linux-64"]
 version = "0.1.0"
 
 [tasks]
